emulator/tests/snapshots/diagnostics__compilation_duplicate_label.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 148
expression: "check_full_pipeline_errors(\"main:\\n    nop\\nmain:\\n    nop\")"
---
error: duplicate label "main"
  ┌─ <preprocessed>:3:1
  │
3 │ main:
  │ ^^^^
